--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "cadmium"]
 	path = cadmium
-	url = git@github.com:SimulationEverywhere/cadmium.git
+	url = https://github.com/SimulationEverywhere/cadmium.git
